[package]
name = "droplinked"
version = "0.1.0"
authors = ["Droplinked <matin.ghiasvand1381@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "*"
near-sdk = "4.1.1"
base16 = { version = "0.2", default-features = false, features = ["alloc"] }
ed25519 = { version = "2.0.1", default-features = false}
ed25519-dalek = { version = "1.0.1", default-features = false}

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
